fix: wrap long lines

--- a/viewer.css
+++ b/viewer.css
@@ -21,6 +21,7 @@ body
 #feedPreviewScroller
 {
 	overflow: auto;
+    width:100%!important;
 }
 
 #feedHeader
@@ -174,7 +175,10 @@ body
 
 .feedPreviewSummary
 {
-	padding: 5px;	
+	padding: 5px;
+    word-break: break-word;
+    max-height:400px;
+    overflow:auto;
 }
 
 .feedPreviewDate
